Production/Production/src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_Key__c</fullName>
        <externalId>true</externalId>
        <label>Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Billing_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <label>Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POST_CODE__c</fullName>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Key__c</fullName>
        <externalId>true</externalId>
        <label>Portfolio Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Box__c</fullName>
        <label>Post Box No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(Portfolio_Key__c &lt;&gt; &quot;&quot;, &quot;Installation&quot;, &quot;&quot;) &amp; 
IF(Account_Key__c &lt;&gt; &quot;&quot;, &quot;Billing&quot;, &quot;&quot;) &amp; 
IF(Customer_Number__c &lt;&gt; &quot;&quot;, &quot;Correspondence&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Type</label>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>